--- a/TargetLiveWallpaper/res/xml/cube2.xml
+++ b/TargetLiveWallpaper/res/xml/cube2.xml
@@ -20,5 +20,4 @@
 <!-- The attributes in this XML file provide configuration information -->
 
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
-        android:settingsActivity="com.example.puzzleduck.targetLiveWallpaper.TargetLiveWallpaperSettings"
-/>
+    android:settingsActivity="com.example.puzzleduck.targetLiveWallpaper.TargetLiveWallpaperSettings" android:thumbnail="@drawable/target_lwp_icon"/>
