--- a/TargetLiveWallpaper/res/xml/target_lwp_settings.xml
+++ b/TargetLiveWallpaper/res/xml/target_lwp_settings.xml
@@ -15,14 +15,11 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/cube2_settings"
-        android:key="cube2wallpaper_settings">
+        android:key="cube2wallpaper_settings" android:title="@string/target_settings">
 
     <ListPreference
             android:key="cube2_shape"
-            android:title="@string/cube2_settings_title"
-            android:summary="@string/cube2_settings_summary"
             android:entries="@array/cube2_shapenames"
-            android:entryValues="@array/cube2_shapeprefix" />
+            android:entryValues="@array/cube2_shapeprefix" android:summary="@string/target_settings_summary" android:title="@string/target_settings_title"/>
 
 </PreferenceScreen>
