Added config options for ALL effects... next for color pickers.

--- a/TargetLiveWallpaper/res/values/shapes.xml
+++ b/TargetLiveWallpaper/res/values/shapes.xml
@@ -19,13 +19,13 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string-array name="cube2_shapenames">
+    <string-array name="target_shapenames">
         <item>"Cube"</item>
         <item>"Dodecahedron"</item>
     <item>&quot;Diamond&quot;</item>
 </string-array>
 
-    <string-array name="cube2_shapeprefix">
+    <string-array name="target_shapeprefix">
         <item>"cube"</item>
         <item>"dodecahedron"</item>
     <item>&quot;diamond&quot;</item>
