--- a/TargetLiveWallpaper/res/values/configs.xml
+++ b/TargetLiveWallpaper/res/values/configs.xml
@@ -177,4 +177,49 @@
     <item>&quot;ubuntulogo&quot;</item>
     <item>&quot;vbox&quot;</item>
 </string-array>
+<integer-array name="pulse_numbervalues1">
+    <item>2</item>
+    <item>4</item>
+    <item>8</item>
+    <item>16</item>
+    <item>32</item>
+</integer-array>
+<string-array name="pulse_numberlabels">
+    <item>&quot;two&quot;</item>
+    <item>&quot;four&quot;</item>
+    <item>&quot;eight&quot;</item>
+    <item>&quot;sixteen&quot;</item>
+    <item>&quot;thirty two&quot;</item>
+</string-array>
+<string-array name="pulse_widthlabels">
+    <item>&quot;three&quot;</item>
+    <item>&quot;five&quot;</item>
+    <item>&quot;nine&quot;</item>
+    <item>&quot;fiveteen&quot;</item>
+    <item>&quot;twenty two&quot;</item>
+    <item>&quot;thirty two&quot;</item>
+</string-array>
+<integer-array name="pulse_widthvalues1">
+    <item>3</item>
+    <item>5</item>
+    <item>9</item>
+    <item>15</item>
+    <item>22</item>
+    <item>32</item>
+</integer-array>
+<string-array name="pulse_numbervalues">
+    <item>&quot;2&quot;</item>
+    <item>&quot;4&quot;</item>
+    <item>&quot;8&quot;</item>
+    <item>&quot;16&quot;</item>
+    <item>&quot;32&quot;</item>
+</string-array>
+<string-array name="pulse_widthvalues">
+    <item>&quot;3&quot;</item>
+    <item>&quot;5&quot;</item>
+    <item>&quot;9&quot;</item>
+    <item>&quot;15&quot;</item>
+    <item>&quot;22&quot;</item>
+    <item>&quot;32&quot;</item>
+</string-array>
 </resources>
