--- a/TargetLiveWallpaper/res/layout/activity.xml
+++ b/TargetLiveWallpaper/res/layout/activity.xml
@@ -1,7 +1,13 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="fill_parent">
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/target_wallpaper_service_label"></TextView>
-        <Button android:text="Button" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/activity_other_apps" >
+</Button>
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searchText" android:id="@+id/textView2"></TextView>
         
         <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/textView3"></TextView>
